# continuousSandpile

./: LICENSE  README.md
0-pre-experiment/: Cargo.toml
0-pre-experiment/src/: main.rs
1-sandpile-basic/: Cargo.toml
1-sandpile-basic/src/: main.rs
2-sandpile-basic-random/: Cargo.toml
2-sandpile-basic-random/src/: main.rs
3-sandpile-gui-random/: Cargo.toml
3-sandpile-gui-random/src/: main.rs
4-sandpile-discrete/src/: main.rs
5-discrete-critical/: Cargo.toml
5-discrete-critical/data/2024-04-27_13-23-16-gs-100000-ps-31-31-15/: avalanche-movement-stats.csv  avalanche-total-magnitude.csv  display-all-locations.txt  display-pile.txt  grain-stats.csv
5-discrete-critical/data/2024-04-27_13-28-33-gs-100000-ps-31-31-15/: avalanche-movement-stats.csv  avalanche-total-magnitude.csv  display-all-locations.txt  display-pile.txt  grain-stats.csv
5-discrete-critical/data/2024-04-27_19-14-14-gs-10000000-ps-51-51-30/: avalanche-total-magnitude.csv
5-discrete-critical/data/2024-04-27_21-18-05-gs-10000000-ps-101-101-60/: avalanche-total-magnitude.csv
5-discrete-critical/data/2024-04-28_08-39-39-gs-10000000-ps-21-21-13/: avalanche-total-magnitude.csv
5-discrete-critical/data/2024-04-28_10-29-07-gs-100000-ps-201-201-122/: avalanche-total-magnitude.csv
5-discrete-critical/src/: main.rs  original-main.rs
5-discrete-critical/src/models/: avalanche.rs  grain.rs  location.rs
5-discrete-critical/src/util/: constants.rs  (+1 more)
analysis/: powerlaw-analysis.py
continuous-sandplie-basic/src/: main.rs
discrete-gui/: Cargo.toml
discrete-gui/src/: main.rs
getting-started/: Cargo.toml
getting-started/src/: main.rs
sandpile-basic-2/src/: main.rs
sandpile-basic-random/: Cargo.toml
sandpile-basic-random/src/: main.rs
