[package]

name = "spinning-square"
version = "0.1.0"
edition = "2021"
authors = [
    "Brian Gormanly <bgormanly@binghamton.edu>"
]

[[bin]]
name = "spinning-square"

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
##NOTE: Remember to revert this (features = ["dynamic_linking"]) before releasing your game! Otherwise you will need to include libbevy_dylib alongside your game if you want it to run. If you remove the "dynamic" feature, your game executable can run standalone. 

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3